base-pkg/main/default/objects/Forum_Item__c/Forum_Item__c.object-meta.xml
<CustomObject>
    <label>Forum Item</label>
    <nameField>
        <displayFormat>Forum-{000000}</displayFormat>
        <label>Forum Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forum Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>