base-pkg/main/default/objects/Forum_Item__c/fields/Likes__c.field-meta.xml
<CustomField>
    <fullName>Likes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Likes</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>