base-pkg/main/default/objects/Forum_Item__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Forum_Item__c</referenceTo>
    <relationshipLabel>Forum Items</relationshipLabel>
    <relationshipName>Forum_Items</relationshipName>
    <type>Lookup</type>
</CustomField>