base-pkg/main/default/objects/Forum_Item__c/fields/Poster__c.field-meta.xml
<CustomField>
    <fullName>Poster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Poster</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forum Items</relationshipLabel>
    <relationshipName>Forum_Items</relationshipName>
    <type>Lookup</type>
</CustomField>