base-pkg/main/default/objects/Forum_Item__c/validationRules/Content_Exists.validationRule-meta.xml
<ValidationRule>
    <fullName>Content_Exists</fullName>
    <active>true</active>
    <description>Content may not be null.</description>
    <errorConditionFormula>ISNULL( Title__c)</errorConditionFormula>
    <errorDisplayField>Content__c</errorDisplayField>
    <errorMessage>Content may not be null.</errorMessage>
</ValidationRule>