base-pkg/main/default/objects/Forum_Item__c/validationRules/Topics_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Topics_Valid</fullName>
    <active>true</active>
    <description>Topics include letters, spaces, and numbers separated by leading semicolons.
May only exist on top-level post.</description>
    <errorConditionFormula>NOT (
   OR (
      AND(Depth__c &lt;&gt; 0, ISBLANK(Topics__c) ),
      AND (
         Depth__c = 0,
         OR(
            Topics__c  = &apos;;&apos;, 
            REGEX(Topics__c,
               &apos;(;((\\w)|( ))*){1,}&apos;
            )
         )
      )
   )
)</errorConditionFormula>
    <errorDisplayField>Topics__c</errorDisplayField>
    <errorMessage>Topics include letters, spaces, and numbers separated by leading semicolons.
May only exist on top-level post.</errorMessage>
</ValidationRule>